# AIAssistantCompanion

./: .gitignore  .replit  README.md  app.py  config.py  google_auth.py  image_client.py  interactive_generator.py  llm_client.py  models.py  pdf_generator.py  pyproject.toml  supabase_client.py  worker.py
attached_assets/: Pasted-Below-is-a-minimal-complexity-implementation-ready-specification-for-a-Replit-AI-agent-It-uses-on-1748973505481.txt  Pasted-Developer-quickstart-Take-your-first-steps-with-the-OpenAI-API-The-Open-1748981357673.txt
static/: index.html  login.html  script.js  style.css
templates/: interactive_template.html
worksheets/: .gitkeep
